# ccq

./: README.md  pyproject.toml
.claude/skills/cc-query/: SKILL.md
ccq/: ccq.py  ccq_core.py
