[project]
name = "ccq"
version = "0.4.0"
description = "Claude Code session log query tool"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ccq = "ccq.ccq:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ccq"]
